--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001
 PORT=3000
 NEXT_PUBLIC_GUIAS_DATA_PROVIDER=local # local or backend -> this is the provider for GUIAS content. if local, gets from frontend/content/guias
+NEXT_PUBLIC_POSTHOG_KEY=posthog-key # key for the posthog app
