--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.427.0",
     "next": "^14.2.18",
     "next-themes": "^0.3.0",
+    "posthog-js": "^1.284.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
