--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.1.1",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.427.0",
+    "motion": "^12.23.24",
     "next": "^14.2.18",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -63,7 +64,8 @@
     "sass": "^1.81.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "textarea-caret": "^3.1.0"
+    "textarea-caret": "^3.1.0",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
