--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dom-to-image": "^2.6.0",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.427.0",
     "motion": "^12.23.24",
@@ -75,6 +76,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/dom-to-image": "^2.6.7",
     "@types/dompurify": "^3.2.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.8.1",
