--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.1.1",
     "dom-to-image": "^2.6.0",
     "dompurify": "^3.2.6",
+    "ics": "^3.8.1",
     "lucide-react": "^0.427.0",
     "motion": "^12.23.24",
     "next": "^14.2.18",
