test workflow changes

--- a/.github/workflows/update-entidades-submodule.yml
+++ b/.github/workflows/update-entidades-submodule.yml
@@ -10,6 +10,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   update-submodule:
@@ -28,20 +29,26 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Update submodule
+        id: update_submodule
         run: |
           echo "🔄 Updating aquario-entidades submodule..."
           cd frontend/content/aquario-entidades
           git fetch origin
           git checkout origin/main
+          SUBMODULE_COMMIT=$(git rev-parse HEAD)
+          SUBMODULE_COMMIT_SHORT=$(git rev-parse --short HEAD)
+          SUBMODULE_COMMIT_MSG=$(git log -1 --pretty=format:"%s")
           cd ../../..
           git add frontend/content/aquario-entidades
+
+          echo "submodule_commit=$SUBMODULE_COMMIT" >> $GITHUB_OUTPUT
+          echo "submodule_commit_short=$SUBMODULE_COMMIT_SHORT" >> $GITHUB_OUTPUT
+          echo "submodule_commit_msg=$SUBMODULE_COMMIT_MSG" >> $GITHUB_OUTPUT
 
           echo "✅ Submodule updated!"
           echo ""
           echo "Current submodule commit:"
-          cd frontend/content/aquario-entidades
-          git log -1 --oneline
-          cd ../../..
+          echo "$SUBMODULE_COMMIT_SHORT - $SUBMODULE_COMMIT_MSG"
 
       - name: Check for changes
         id: check_changes
@@ -54,13 +61,37 @@ jobs:
             echo "📝 Changes detected in submodule"
           fi
 
-      - name: Commit and push changes
+      - name: Create branch and commit changes
         if: steps.check_changes.outputs.changed == 'true'
         run: |
+          BRANCH_NAME="chore/update-entidades-submodule-${{ github.run_id }}"
+          git checkout -b "$BRANCH_NAME"
           git add frontend/content/aquario-entidades
           git commit -m "${{ github.event.inputs.commit_message }}"
-          git push
-          echo "✅ Changes committed and pushed to main!"
+          git push -u origin "$BRANCH_NAME"
+          echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "✅ Changes committed and pushed to branch: $BRANCH_NAME"
+        id: commit_changes
+
+      - name: Create Pull Request
+        if: steps.check_changes.outputs.changed == 'true'
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ steps.commit_changes.outputs.branch_name }}
+          title: "${{ github.event.inputs.commit_message }}"
+          body: |
+            🤖 Automated submodule update
+
+            This PR updates the `aquario-entidades` submodule to the latest commit from `origin/main`.
+
+            **Submodule commit:**
+            - **Hash:** `${{ steps.update_submodule.outputs.submodule_commit_short }}`
+            - **Message:** ${{ steps.update_submodule.outputs.submodule_commit_msg }}
+
+            Please review and merge if everything looks good.
+          base: main
+          delete-branch: true
 
       - name: No changes summary
         if: steps.check_changes.outputs.changed == 'false'
