--- a/.github/workflows/update-guias-submodule.yml
+++ b/.github/workflows/update-guias-submodule.yml
@@ -75,23 +75,29 @@ jobs:
 
       - name: Create Pull Request
         if: steps.check_changes.outputs.changed == 'true'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ steps.commit_changes.outputs.branch_name }}
-          title: "${{ github.event.inputs.commit_message }}"
-          body: |
-            🤖 Automated submodule update
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_BODY=$(cat <<EOF
+          🤖 Automated submodule update
 
-            This PR updates the `aquario-guias` submodule to the latest commit from `origin/main`.
+          This PR updates the \`aquario-guias\` submodule to the latest commit from \`origin/main\`.
 
-            **Submodule commit:**
-            - **Hash:** `${{ steps.update_submodule.outputs.submodule_commit_short }}`
-            - **Message:** ${{ steps.update_submodule.outputs.submodule_commit_msg }}
+          **Submodule commit:**
+          - **Hash:** \`${{ steps.update_submodule.outputs.submodule_commit_short }}\`
+          - **Message:** ${{ steps.update_submodule.outputs.submodule_commit_msg }}
 
-            Please review and merge if everything looks good.
-          base: main
-          delete-branch: true
+          Please review and merge if everything looks good.
+          EOF
+          )
+
+          gh pr create \
+            --title "${{ github.event.inputs.commit_message }}" \
+            --body "$PR_BODY" \
+            --base main \
+            --head "${{ steps.commit_changes.outputs.branch_name }}"
+
+          echo "✅ Pull request created successfully!"
 
       - name: No changes summary
         if: steps.check_changes.outputs.changed == 'false'
