--- a/.github/workflows/update-entidades-submodule.yml
+++ b/.github/workflows/update-entidades-submodule.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN_PAT || secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -56,9 +56,12 @@ jobs:
 
       - name: Commit and push changes
         if: steps.check_changes.outputs.changed == 'true'
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_PAT || secrets.GITHUB_TOKEN }}
         run: |
           git add frontend/content/aquario-entidades
           git commit -m "${{ github.event.inputs.commit_message }}"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git push
           echo "✅ Changes committed and pushed to main!"
 
