--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,6 @@
-DATABASE_URL="postgresql://docker:docker@localhost:5432/aquario?schema=public"
-JWT_SECRET="your-super-secret-key"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/aquario"
+JWT_SECRET="your-super-secret-jwt-key-at-least-32-chars"
+RESEND_API_KEY=""
+MASTER_ADMIN_EMAILS="aquarioufpb@gmail.com"
+FRONTEND_URL="http://localhost:3000"
+EMAIL_MOCK_MODE=true
