--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "resend": "^6.5.2",
     "tsyringe": "^4.10.0",
     "zod": "^4.1.8"
   },
