--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ RESEND_API_KEY=""
 MASTER_ADMIN_EMAILS="aquarioufpb@gmail.com"
 FRONTEND_URL="http://localhost:3000"
 EMAIL_MOCK_MODE=true
+EMAIL_FROM=noreply@aquarioufpb.com
