--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,9 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001
 PORT=3000
+
 NEXT_PUBLIC_GUIAS_DATA_PROVIDER=local # local or backend -> this is the provider for GUIAS content. if local, gets from aquario-guias submodule
 NEXT_PUBLIC_ENTIDADES_DATA_PROVIDER=local # same as above. reads from aquario-entidades submodule
+NEXT_PUBLIC_USE_BACKEND=false # if it is false, all providers are local and no login/profile appears
+
 NEXT_PUBLIC_POSTHOG_KEY=posthog-key # key for the posthog app
 NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
