--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # -------------------------------------------
+# Backend usage. Disabling it will make it work forntend-only
+# -------------------------------------------
+NEXT_PUBLIC_USE_BACKEND=true
+
+# -------------------------------------------
 # Database
 # -------------------------------------------
 # PostgreSQL connection string
