--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "prisma generate && next build",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:reset": "prisma migrate reset",
+    "db:push": "dotenv -e .env.local -- prisma db push",
+    "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "db:studio": "dotenv -e .env.local -- prisma studio",
+    "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
+    "db:reset": "dotenv -e .env.local -- prisma migrate reset",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -31,15 +31,11 @@
     "test:all": "npm run test && npm run test:integration && npm run test:e2e"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "resend": "^4.0.0",
-    "zod": "^3.23.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@prisma/client": "^6.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -61,11 +57,13 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "dompurify": "^3.2.6",
     "ics": "^3.8.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "motion": "^12.23.24",
     "next": "^14.2.18",
@@ -77,24 +75,25 @@
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "reactjs-tiptap-editor": "^0.1.9",
+    "resend": "^4.0.0",
     "sass": "^1.81.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "textarea-caret": "^3.1.0",
-    "three": "^0.181.0"
+    "three": "^0.181.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "prisma": "^6.0.0",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/dompurify": "^3.2.0",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.8.1",
     "@types/react": "18.3.5",
     "@types/react-dom": "^18",
@@ -103,6 +102,7 @@
     "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/ui": "^3.2.4",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^10.1.8",
@@ -114,6 +114,7 @@
     "jsdom": "^27.0.0",
     "postcss": "^8",
     "prettier": "^3.6.2",
+    "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.0",
     "typescript": "^5.9.3",
