--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,101 @@
 # ===========================================
-# Aquário - Environment Variables
+# Aquário - Environment Configuration
 # ===========================================
-# Copy this file to .env.local and fill in your values
-# .env.local is gitignored and safe for secrets
+#
+# SETUP:
+#   1. Copy this file: cp .env.example .env.local
+#   2. Edit .env.local with your values
+#   3. .env.local is gitignored and safe for secrets
+#
+# ENVIRONMENTS:
+#   - Dev:     Local development (minimal setup, mocked services)
+#   - Staging: Preview deployments (real services, test data)
+#   - Prod:    Production (real everything)
+#
+# ===========================================
 
 # -------------------------------------------
-# App URL
+# App Configuration
 # -------------------------------------------
-# The public URL of the app (used for email links)
-# In production, set to your domain (e.g., https://aquarioufpb.com)
-# Defaults to http://localhost:3000 if not set
+
+# Public URL of the app (used for email links, OAuth callbacks)
+# Dev: http://localhost:3000
+# Staging: https://aquario-staging.vercel.app (or preview URL)
+# Prod: https://aquarioufpb.com
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-
-# -------------------------------------------
-# Backend usage. Disabling it will make it work forntend-only
-# -------------------------------------------
-NEXT_PUBLIC_USE_BACKEND=true
 
 # -------------------------------------------
 # Database
 # -------------------------------------------
 # PostgreSQL connection string
-# For local dev with Docker: postgresql://postgres:password@localhost:5432/aquario
+#
+# Options:
+#   1. Local Docker:  postgresql://postgres:password@localhost:5432/aquario
+#   2. Neon (cloud):  postgresql://user:pass@ep-xxx.us-east-2.aws.neon.tech/aquario
+#   3. Leave empty:   Uses in-memory database (no persistence, good for UI work)
+#
+# For local Docker, run: docker-compose up -d
 DATABASE_URL="postgresql://postgres:password@localhost:5432/aquario"
+
+# Override database provider (optional)
+# "prisma" = use DATABASE_URL (default)
+# "memory" = in-memory database (no DATABASE_URL needed)
+# DB_PROVIDER="prisma"
 
 # -------------------------------------------
 # Authentication
 # -------------------------------------------
-# JWT secret key (must be at least 32 characters)
-JWT_SECRET="your-super-secret-jwt-key-at-least-32-characters-long"
 
-# JWT token expiration (e.g., "7d", "24h", "1h")
+# JWT secret key (REQUIRED - must be at least 32 characters)
+# Generate one: openssl rand -base64 32
+JWT_SECRET="change-me-to-a-real-secret-at-least-32-chars"
+
+# JWT token expiration
 JWT_EXPIRES_IN="7d"
 
-# Comma-separated list of emails that get MASTER_ADMIN role on registration
+# Emails that get MASTER_ADMIN role on registration (comma-separated)
 MASTER_ADMIN_EMAILS="aquarioufpb@gmail.com"
 
 # -------------------------------------------
 # Email (Resend)
 # -------------------------------------------
-# Resend API key for sending emails (leave empty to disable emails in dev)
+# Email service configuration
+#
+# BEHAVIOR:
+#   - If RESEND_API_KEY is set: Real emails via Resend
+#   - If RESEND_API_KEY is empty: Mock mode (emails logged to console, users auto-verified)
+#
+# Get your API key at: https://resend.com
 RESEND_API_KEY=""
 
-# Email sender address
+# Email sender address (requires verified domain in Resend)
 EMAIL_FROM="noreply@aquarioufpb.com"
-
-# When true, users are auto-verified on registration (skip email verification)
-# Useful for local development
-EMAIL_MOCK_MODE="true"
 
 # -------------------------------------------
 # Data Providers
 # -------------------------------------------
-# Where to get content from: "local" (git submodules) or "backend" (API routes)
-# Use "local" for static content, "backend" when you need DB features
+# Where to load content from
+#
+# Options:
+#   "local"   = Git submodules (static, no DB needed)
+#   "backend" = API routes (dynamic, requires DB)
+#
+# For frontend-only work, you can use "local" with DB_PROVIDER=memory
 NEXT_PUBLIC_GUIAS_DATA_PROVIDER="backend"
 NEXT_PUBLIC_ENTIDADES_DATA_PROVIDER="backend"
+
+# Enable/disable backend features entirely
+NEXT_PUBLIC_USE_BACKEND="true"
 
 # -------------------------------------------
 # Analytics (PostHog)
 # -------------------------------------------
-# PostHog project API key (optional - leave empty to disable)
+# PostHog analytics configuration
+#
+# BEHAVIOR:
+#   - Only tracks in production (NODE_ENV=production)
+#   - If key is empty: Analytics disabled entirely
+#
+# Get your key at: https://posthog.com
 NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_POSTHOG_HOST="https://us.i.posthog.com"
