--- a/.env.example
+++ b/.env.example
@@ -30,12 +30,12 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 # PostgreSQL connection string
 #
 # Options:
-#   1. Local Docker:  postgresql://postgres:password@localhost:5432/aquario
+#   1. Local Docker:  postgresql://aquario:aquario@localhost:5432/aquario
 #   2. Neon (cloud):  postgresql://user:pass@ep-xxx.us-east-2.aws.neon.tech/aquario
 #   3. Leave empty:   Uses in-memory database (no persistence, good for UI work)
 #
 # For local Docker, run: docker-compose up -d
-DATABASE_URL="postgresql://postgres:password@localhost:5432/aquario"
+DATABASE_URL="postgresql://aquario:aquario@localhost:5432/aquario"
 
 # Override database provider (optional)
 # "prisma" = use DATABASE_URL (default)
