--- a/package.json
+++ b/package.json
@@ -71,15 +71,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "motion": "^12.23.24",
-    "next": "^14.2.18",
+    "next": "^15.5.9",
     "next-themes": "^0.3.0",
     "posthog-js": "^1.284.0",
     "posthog-node": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "react-quill": "^2.0.0",
-    "reactjs-tiptap-editor": "^0.1.9",
     "resend": "^4.0.0",
     "sass": "^1.81.0",
     "sonner": "^2.0.7",
@@ -108,8 +106,8 @@
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/ui": "^3.2.4",
     "dotenv-cli": "^11.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^15.5.9",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-unicorn": "^50.0.0",
