--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,11 @@ DATABASE_URL="postgresql://aquario:aquario@localhost:5432/aquario"
 # DB_PROVIDER="prisma"
 
 # -------------------------------------------
+# Blob Storage (Production only, local uses local storage)
+# -------------------------------------------
+BLOB_READ_WRITE_TOKEN="vercel_blob_key"
+
+# -------------------------------------------
 # Authentication
 # -------------------------------------------
 
