--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.90.5",
@@ -78,6 +79,7 @@
     "posthog-node": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-crop": "^5.5.6",
     "react-markdown": "^9.0.1",
     "resend": "^4.0.0",
     "sass": "^1.81.0",
