--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@
 # ===========================================
 #
 # SETUP:
-#   1. Copy this file: cp .env.example .env.local
-#   2. Edit .env.local with your values
-#   3. .env.local is gitignored and safe for secrets
+#   1. Copy this file: cp .env.example .env
+#   2. Edit .env with your values
+#   3. .env is gitignored and safe for secrets
 #
 # ENVIRONMENTS:
 #   - Dev:     Local development (minimal setup, mocked services)
