--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "test:e2e:headed": "playwright test --headed",
     "test:all": "npm run test && npm run test:integration && npm run test:e2e",
     "db:generate": "prisma generate",
-    "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
+    "db:migrate": "dotenv -e .env -- prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
-    "db:push": "dotenv -e .env.local -- prisma db push",
-    "db:seed": "dotenv -e .env.local -- tsx prisma/seed.ts",
-    "db:studio": "dotenv -e .env.local -- prisma studio",
-    "db:reset": "dotenv -e .env.local -- prisma migrate reset",
+    "db:push": "dotenv -e .env -- prisma db push",
+    "db:seed": "dotenv -e .env -- tsx prisma/seed.ts",
+    "db:studio": "dotenv -e .env -- prisma studio",
+    "db:reset": "dotenv -e .env -- prisma migrate reset",
     "release:patch": "npm version patch -m 'chore(release): %s'",
     "release:minor": "npm version minor -m 'chore(release): %s'",
     "release:major": "npm version major -m 'chore(release): %s'"
