--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "db:reset": "dotenv -e .env -- prisma migrate reset",
     "release:patch": "npm version patch -m 'chore(release): %s'",
     "release:minor": "npm version minor -m 'chore(release): %s'",
-    "release:major": "npm version major -m 'chore(release): %s'"
+    "release:major": "npm version major -m 'chore(release): %s'",
+    "postinstall": "prisma generate"
   },
-  "postinstall": "prisma generate",
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
