--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     ".next/types/**/*.ts",
     "src/Tests & Examples - Dev/Week1 - CSS, Tailwind and Shadcn/Exemplo/ComponentWithCss"
   ],
-  "exclude": ["node_modules", "content/**/scripts"]
+  "exclude": ["node_modules", "content"]
 }
