--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - "src/**"
       - "prisma/**"
-      - "tests/**"
       - "package.json"
       - ".github/workflows/tests.yml"
   pull_request:
@@ -14,7 +13,6 @@ on:
     paths:
       - "src/**"
       - "prisma/**"
-      - "tests/**"
       - "package.json"
       - ".github/workflows/tests.yml"
 
@@ -74,7 +72,6 @@ jobs:
 
     env:
       DATABASE_URL: postgresql://postgres:password@localhost:5432/aquario_test
-      DB_PROVIDER: prisma
       NODE_ENV: test
       JWT_SECRET: test-jwt-secret-key-minimum-32-characters-long
       RESEND_API_KEY: test-resend-api-key
@@ -113,75 +110,10 @@ jobs:
           path: test-results/
           retention-days: 7
 
-  e2e-tests:
-    name: E2E Tests (Playwright)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          submodules: true
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-          cache: "npm"
-          cache-dependency-path: package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate Prisma Client
-        run: npm run db:generate
-
-      - name: Get Playwright version
-        id: playwright-version
-        run: |
-          echo "version=$(npm list @playwright/test --depth=0 --json | jq -r '.dependencies["@playwright/test"].version')" >> $GITHUB_OUTPUT
-
-      - name: Cache Playwright browsers
-        uses: actions/cache@v4
-        id: playwright-cache
-        with:
-          path: ~/.cache/ms-playwright
-          key: playwright-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}
-
-      - name: Install Playwright browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps chromium firefox webkit
-
-      - name: Install Playwright system dependencies (if cached)
-        if: steps.playwright-cache.outputs.cache-hit == 'true'
-        run: npx playwright install-deps
-
-      - name: Build application
-        run: npm run build
-
-      - name: Run E2E tests
-        run: npm run test:e2e
-
-      - name: Upload E2E test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: e2e-test-results
-          path: test-results/
-          retention-days: 7
-
-      - name: Upload Playwright HTML report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 7
-
   test-summary:
     name: Test Summary
     runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests, e2e-tests]
+    needs: [unit-tests, integration-tests]
     if: always()
 
     steps:
@@ -202,18 +134,11 @@ jobs:
             echo "❌ Integration Tests: Failed" >> $GITHUB_STEP_SUMMARY
           fi
 
-          if [ "${{ needs.e2e-tests.result }}" == "success" ]; then
-            echo "✅ E2E Tests: Passed" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "❌ E2E Tests: Failed" >> $GITHUB_STEP_SUMMARY
-          fi
-
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "📊 View detailed test reports in the artifacts section." >> $GITHUB_STEP_SUMMARY
 
       - name: Fail if any tests failed
         if: |
           needs.unit-tests.result != 'success' ||
-          needs.integration-tests.result != 'success' ||
-          needs.e2e-tests.result != 'success'
+          needs.integration-tests.result != 'success'
         run: exit 1
