--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -126,9 +126,30 @@ jobs:
           NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
         run: |
           BRANCH_ID="${{ steps.check-limit.outputs.branch_id }}"
+
+          # Get database and role info
+          DATABASES=$(curl -s -H "Authorization: Bearer $NEON_API_KEY" \
+            "https://console.neon.tech/api/v2/projects/$NEON_PROJECT_ID/branches/$BRANCH_ID/databases")
+          DB_NAME=$(echo "$DATABASES" | jq -r '.databases[0].name')
+
+          ROLES=$(curl -s -H "Authorization: Bearer $NEON_API_KEY" \
+            "https://console.neon.tech/api/v2/projects/$NEON_PROJECT_ID/branches/$BRANCH_ID/roles")
+          ROLE_NAME=$(echo "$ROLES" | jq -r '.roles[] | select(.protected == false) | .name' | head -1)
+
+          echo "Database: $DB_NAME, Role: $ROLE_NAME"
+
+          # Get connection URI
           CONN=$(curl -s -H "Authorization: Bearer $NEON_API_KEY" \
-            "https://console.neon.tech/api/v2/projects/$NEON_PROJECT_ID/connection_uri?branch_id=$BRANCH_ID&role_name=neondb_owner")
+            "https://console.neon.tech/api/v2/projects/$NEON_PROJECT_ID/connection_uri?branch_id=$BRANCH_ID&role_name=$ROLE_NAME&database_name=$DB_NAME")
+
           DB_URL=$(echo "$CONN" | jq -r '.uri')
+
+          if [ -z "$DB_URL" ] || [ "$DB_URL" == "null" ]; then
+            echo "::error::Failed to get connection URI"
+            echo "$CONN"
+            exit 1
+          fi
+
           echo "db_url=$DB_URL" >> $GITHUB_OUTPUT
 
       - name: Set DATABASE_URL
