--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -170,8 +170,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run database migrations
-        run: npx prisma migrate deploy
+      - name: Reset database with seed data
+        # Use reset instead of migrate deploy to ensure preview only has seed data
+        # This prevents exposing production data in public preview deployments
+        run: npx prisma migrate reset --force
         env:
           DATABASE_URL: ${{ steps.db-url.outputs.url }}
 
