--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,6 +2,7 @@ name: Preview Deployment
 
 on:
   pull_request:
+    branches: [staging]
     types: [opened, synchronize, reopened, closed]
 
 permissions:
