--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,16 +1,15 @@
-name: Production Deployment
+name: Production Release
 
 on:
   release:
     types: [published]
 
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+permissions:
+  contents: write
 
 jobs:
-  deploy-production:
-    name: Deploy to Production
+  release-production:
+    name: Release to Production
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +17,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-depth: 0
+          ref: staging
+
+      - name: Merge staging into main
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout main
+          git merge staging --no-edit -m "Release ${{ github.event.release.tag_name }}: merge staging into main"
+          git push origin main
+          # Vercel auto-deploys when main is pushed
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -33,21 +43,12 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL_PRODUCTION }}
 
-      - name: Install Vercel CLI
-        run: npm install -g vercel
-
-      - name: Deploy to Vercel (Production)
-        id: deploy
-        run: |
-          URL=$(vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }})
-          echo "url=$URL" >> $GITHUB_OUTPUT
-
       - name: Summary
         run: |
-          echo "## 🚀 Production Deployed" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 Production Release" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Version:** ${{ github.event.release.tag_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**URL:** ${{ steps.deploy.outputs.url }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Status:** Merged staging → main, Vercel deploying..." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Release Notes:**" >> $GITHUB_STEP_SUMMARY
           echo "${{ github.event.release.body }}" >> $GITHUB_STEP_SUMMARY
