--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,12 @@ NEXT_PUBLIC_GUIAS_DATA_PROVIDER="backend"
 
 
 # -------------------------------------------
+# Environment Flags
+# -------------------------------------------
+# Set to "true" in staging deployments to enable staging indicators
+NEXT_PUBLIC_IS_STAGING=""
+
+# -------------------------------------------
 # Analytics (PostHog)
 # -------------------------------------------
 # PostHog analytics configuration
