--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -50,6 +50,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+          # Delete remote branch if it exists
+          git push origin --delete "$BRANCH" 2>/dev/null || true
+
           git checkout -b "$BRANCH"
           git add README.md
           git commit -m "chore: update version badge to ${VERSION}"
